v2.0.0 (2017.06.xx)
  - Update SQLite database engine to version 3.19.3
  - New Electronic Program Guide (EPG) implementation
  
v1.0.10 (2017.06.07)
  - Reduce number of Kodi callbacks generated during initial discovery tasks
  - Delay initial discovery tasks a configurable number of seconds to work around Kodi deadlock condition
  - Add "Startup discovery task delay (seconds)" advanced option
  - Remove unnecessary 1 second delays when manually triggering discoveries via PVR Client Specific settings
  - Remove unnecessary electronic program guide update when channel lineup changes are detected

v1.0.9 (2017.06.02)
  - Update SQLite database engine to version 3.19.2
  - Update cURL library to version 7.54.0
  - Perform immediate discovery of all local network resources (devices, lineups, recordings) during addon startup
  - Clear pending scheduled discovery tasks during addon stop and destroy operations
  - Prevent PVR triggers from being signaled by background discovery tasks still running during addon stop and destroy operations
  - Filter out DRM channels from Electronic Program Guide discovery change triggers; resolves CEpgContainer errors in log
  - Fix internal exception handling and return values returned from menu hooks
  - Reduce database contention during operations that transfer data back to Kodi via callback functions
  - Reduce SQLite busy handler wait period from 30 seconds to 5 seconds
  - Add "Reset discovery database" PVR Client Specific setting

v1.0.8 (2017.05.22)
  - Filter out DRM channels from Channel Groups; resolves PVRTransferChannelGroupMember errors in log

v1.0.7 (2017.04.02)
  - Fix problem introduced in v1.0.4 causing all discovery tasks to be cancelled if devices/lineups change or certain settings are changed

v1.0.6 (2017.04.01)
  - Add "Use season/episode number as title for recordings" option
  - (Android) Initial release of modified Kodi APKs for Android ARM and x86 devices

v1.0.5 (2017.03.27)