@@ -1,6 +1,8 @@
 v2.0.0 (2017.06.xx)
   - Update SQLite database engine to version 3.19.3
   - New Electronic Program Guide (EPG) implementation
+  - Use GUI dialog boxes to indicate errors that occur when adding timers rather than throwing an exception
+  - Add a selection dialog box when adding Record Series Rule timers to allow user to choose from matching titles
   
 v1.0.10 (2017.06.07)
   - Reduce number of Kodi callbacks generated during initial discovery tasks
